# divechain

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
src/: client.rs  keychain.rs  lib.rs  macos_keychain.rs  main.rs  protocol.rs  secret_store.rs  server.rs
tests/: cli.rs  integration_test.rs
