[package]
name = "divechain"
version = "0.1.0"
edition = "2024"
description = "A CLI for running commands with secrets from the macOS Keychain injected as environment variables."
repository = "https://github.com/takeyaqa/divechain"
license = "MIT"
keywords = ["cli", "secrets", "keychain", "macos", "devcontainers"]
categories = ["authentication", "command-line-utilities", "development-tools", "security"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
rpassword = "7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"

[dev-dependencies]
snapbox = "1.2"
